--- a/SanteConnect/src/components/page.css
+++ b/SanteConnect/src/components/page.css
@@ -24,13 +24,24 @@ h2 {
     margin-right: 15rem;
     font-style: italic;
     font-size: large;
+
 }
 main {
+    
     background: url(./images/background_connexion.jpeg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    position:fixed;
+    padding:0;
+    margin:0;
+
+    top:0;
+    left:0;
+
+    width: 100%;
+    height: 100%;
 }
 
 #posts_box {
@@ -51,4 +62,15 @@ main {
     bottom: 0;
     font-size: 25px;
     height: 7%;
+}
+#brand_footer {
+
+    margin:auto;
+    
+}
+
+#return_button {
+
+    margin-bottom: 4rem;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
