--- a/SanteConnect/src/components/page.css
+++ b/SanteConnect/src/components/page.css
@@ -20,8 +20,8 @@ a:hover, a:visited, a:link, a:active
 }
 
 h2 {
-    margin-left: 6rem;
-    margin-right: 6rem;
+    margin-left: 15rem;
+    margin-right: 15rem;
     margin-top: 2rem;
     margin-bottom: 6rem;
     text-align: center;
@@ -30,7 +30,19 @@ h2 {
     background-color: blanchedalmond;
 }
 
+#postPage_Box_Title {
+
+    font-family: 'Arial Narrow Bold';
+    font-size: xx-large;
+    background-color: blanchedalmond;
+    margin-left: 15rem;
+    margin-right: 15rem;
+
+}
+
 #postPage_box {
+    font-family: Arial, Helvetica, sans-serif, cursive;
+    font-size:small;
     background-color: blanchedalmond;
     display: flex;
     text-indent: 50px;
@@ -38,6 +50,7 @@ h2 {
     margin-right: 15rem;
     font-style: italic;
     font-size: large;
+    margin-bottom: 4rem;
 
 }
 
@@ -53,7 +66,7 @@ h2 {
     background-color: #2cb6b8;
     color: black;
     text-align: end;
-    margin:auto;
+    margin-top: 0;
     position: fixed;
     width: 100%;
     bottom: 0;
