Added comment models and routes in the server part

--- a/SanteConnect/src/components/Comments/index.css
+++ b/SanteConnect/src/components/Comments/index.css
@@ -1,4 +1,5 @@
 .main-container {
+    background-color: blanchedalmond;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
