--- a/SanteConnect/src/components/page.css
+++ b/SanteConnect/src/components/page.css
@@ -53,7 +53,7 @@ h2 {
 #posts_box {
 
     display : flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 
